@@ -7,6 +7,8 @@ import io.fairspace.saturn.services.metadata.validation.*;
 import io.fairspace.saturn.services.users.*;
 import io.fairspace.saturn.services.workspaces.*;
 import io.fairspace.saturn.webdav.*;
+import io.fairspace.saturn.webdav.blobstore.BlobInfo;
+import io.fairspace.saturn.webdav.blobstore.BlobStore;
 import io.milton.http.ResourceFactory;
 import io.milton.http.exceptions.*;
 import io.milton.resource.*;
@@ -27,8 +29,6 @@ import java.util.stream.*;
 import static io.fairspace.saturn.TestUtils.*;
 import static io.fairspace.saturn.TestUtils.mockAuthentication;
 import static io.fairspace.saturn.auth.RequestContext.getCurrentRequest;
-import static io.fairspace.saturn.config.Services.*;
-import static io.fairspace.saturn.vocabulary.Vocabularies.VOCABULARY;
 import static org.apache.jena.query.DatasetFactory.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.lenient;
@@ -54,7 +54,7 @@ public class ViewServiceTest {
         viewDatabase.url = "jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE";
         viewDatabase.username = "sa";
         viewDatabase.password = "";
-        ViewsConfig config = ConfigLoader.VIEWS_CONFIG;
+        ViewsConfig config = loadViewsConfig("src/test/resources/test-views.yaml");
         ViewStoreClientFactory.H2_DATABASE = true;
         var viewStoreClientFactory = new ViewStoreClientFactory(config, viewDatabase);
 
@@ -63,23 +63,27 @@ public class ViewServiceTest {
         Dataset ds = wrap(dsg);
         Transactions tx = new SimpleTransactions(ds);
         Model model = ds.getDefaultModel();
+        var vocabulary = model.read("test-vocabulary.ttl");
 
         var workspaceService = new WorkspaceService(tx, userService);
 
         var context = new Context();
 
         var davFactory = new DavFactory(model.createResource(baseUri), store, userService, context);
-        ds.getContext().set(FS_ROOT, davFactory.root);
 
-        viewService = new ViewService(ConfigLoader.CONFIG.search, ConfigLoader.VIEWS_CONFIG, ds, viewStoreClientFactory);
+        viewService = new ViewService(
+                ConfigLoader.CONFIG.search,
+                config,
+                ds,
+                viewStoreClientFactory);
 
         when(permissions.canWriteMetadata(any())).thenReturn(true);
-        api = new MetadataService(tx, VOCABULARY, new ComposedValidator(new UniqueLabelValidator()), permissions);
+        api = new MetadataService(tx, vocabulary, new ComposedValidator(new UniqueLabelValidator()), permissions);
 
         setupRequestContext();
         var request = getCurrentRequest();
 
-        var taxonomies = model.read("taxonomies.ttl");
+        var taxonomies = model.read("test-taxonomies.ttl");
         api.put(taxonomies);
 
         User user = createTestUser("user", true);
@@ -105,8 +109,12 @@ public class ViewServiceTest {
         var facets = viewService.getFacets();
         var dateFacets = facets.stream()
                 .filter(facet -> facet.getType() == ViewsConfig.ColumnType.Date)
-                .collect(Collectors.toList());
+                .toList();
         Assert.assertEquals(2, dateFacets.size());
-        viewService.getViews();
+
+        var boolFacets = facets.stream()
+                .filter(facet -> facet.getType() == ViewsConfig.ColumnType.Boolean)
+                .toList();
+        Assert.assertEquals(1, boolFacets.size());
     }
 }
